tests/derive/ui/de/fail/missing_value.stderr
error: `tag` requires a value
 --> tests/derive/ui/de/fail/missing_value.rs:4:16
  |
4 | struct A(#[irc(tag)] String);
  |                ^^^

error: `tag_flag` requires a value
 --> tests/derive/ui/de/fail/missing_value.rs:7:16
  |
7 | struct B(#[irc(tag_flag)] String);
  |                ^^^^^^^^

error: expected `=`
  --> tests/derive/ui/de/fail/missing_value.rs:11:28
   |
11 |     #[irc(tag = "key", with)]
   |                            ^

error: `command` requires a value
  --> tests/derive/ui/de/fail/missing_value.rs:16:7
   |
16 | #[irc(command)]
   |       ^^^^^^^
